<resources>
    <string name="app_name">Weather</string>
    <string name="insert_a_location">Insert a Location</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>